...
                    SingleChildScrollView(
                      scrollDirection: Axis.horizontal,
                      padding: const EdgeInsets.all(10),
                      child: Row(
                        mainAxisAlignment: MainAxisAlignment.spaceBetween,
                        children: [
                          factoryButton(0, 'Factory 1', Icons.factory),
                          const SizedBox(
                            width: 20,
                          ),
                          factoryButton(1, 'Factory 2', Icons.factory),
                          const SizedBox(
                            width: 20,
                          ),
                          factoryButton(2, 'Factory 3', Icons.factory),
                        ],
                      ),
...
